# cuFHE

./: .gitmodules
include/: vsp_bootstrap_gpu.cuh  vsp_cufhe_gpu.cuh  vsp_gatebootstrapping_gpu.cuh  vsp_keyswitch_gpu.cuh
include/details/: vsp_allocator.h  vsp_allocator_gpu.cuh  vsp_assert.h  vsp_error_gpu.cuh  vsp_math.h  vsp_utils_gpu.cuh
include/ntt_gpu/: vsp_ntt.cuh  vsp_ntt_1024_device.cuh  vsp_ntt_ffp.cuh  vsp_ntt_shifting.cuh  vsp_ntt_single_thread.cuh  vsp_ntt_twiddle.cuh
src/: CMakeLists.txt  vsp_bootstrap_gpu.cu  vsp_cufhe_gates_gpu.cu  vsp_cufhe_gpu.cu  vsp_keyswitch_gpu.cu
src/details/: vsp_allocator_gpu.cu
src/ntt_gpu/: vsp_ntt_twiddle.cu
test/: CMakeLists.txt  plain.h  test_FFP.cu  test_api_gpu.cu  test_api_gpu_multi.cu  test_cmux.cc  test_gate_gpu.cc  test_gate_gpu_multi.cc  test_intensive.cc  test_perf.cc  test_util.h
